# Vergios

./: README.md  build.gradle  gradle.properties  gradlew  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  vfs_hook.cpp
app/src/main/java/com/executor/vm/: MainActivity.java
